--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@
 <b>THIS IS AN EDIT THAT THEY WILL LOVE...</b>
 <br>
 
-<h2>Yo this is the new update from 2/19!!!!</h2>
+<h2>Blackjack and other things! 2/21/2018</h2>
